<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginScreen"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_52sdp"
        android:textSize="@dimen/_24ssp"
        android:textColor="@color/black"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_in_your_huawei_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_240sdp"
        android:layout_marginTop="@dimen/_48sdp"
        android:layout_marginBottom="@dimen/_48sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_subtitle"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        android:src="@drawable/login_image"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:backgroundTint="@color/main_color"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sign_in"
        app:cornerRadius="@dimen/_20sdp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/login_image"
        />

</androidx.constraintlayout.widget.ConstraintLayout>